Описал авторизацию в Swagger-doc, немного изменил логику создания товара
